admin/src/components/routes/ActionWrapper/Action.css
.action.isLoading {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.action.isLoading sl-spinner {
    position: relative;
    bottom: 50px;
}

.action .header {
    position: sticky;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 40px;
    background-color: var(--bg-primary);
    border-bottom: 1px solid var(--border-primary);
    z-index: 10;
    height: 90px;
}

.action .header .actionTitle  {
    display: grid;
    grid-template-columns: 30px 1fr;
    grid-template-areas:
        "logo name"
        "logo description";
    column-gap: 25px;
    align-items: center;
}

.action .header .actionTitle .littleLogo {
    grid-area: logo;
}

.action .header .actionTitle .littleLogo img {
    height: 35px;
}

.action .header .actionTitle .actionName {
    grid-area: name;
}

.action .header .actionTitle .actionTypeDescription {
    font-size: 13px;
    grid-area: description;
}

.action .header .actionTitle .name {
    font-weight: 600;
}

.action .header .actionTitle .name .nameInput {
    max-width: 180px;
    display: inline-block;
    margin: auto;
    margin-bottom: 5px;
}

.action .header .actionTitle .name .nameInput::part(base) {
    font-size: 14px;
}

.action .header .actionTitle .name sl-icon-button {
    font-size: 14px;
}

.action .header .headerButtons {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 20px;
}

.action .header .headerButtons .saveAction::part(base) {
    min-width: 200px;
}

.action .body {
    max-width: 1200px;
    margin: auto;
    margin-top: 50px;
}

.action .section {
    margin-bottom: 70px;
}

.action .section:last-of-type {
    margin-bottom: 0;
}

.action .nameInput {
    margin: 10px 25px;
}

.action .logical {
    margin: 0 25px 25px 25px;
}

.action .condition {
    display: flex;
    gap: 20px;
    margin: 10px 25px;
}

.action .condition .propertiesItemName {
    font-size: 14px;
    font-weight: 600;
}

.action .condition .propertiesItemName .name {
    font-weight: 400;
    font-size: 13px;
    opacity: .7;
}

.action .condition .propertiesItemType {
    font-size: 13px;
    opacity: .7;
}

.action .addCondition {
    margin: 10px 25px;
}

.action .propertiesButtons {
    justify-content: center;
    display: flex;
    gap: 30px;
    align-items: baseline;
}

.action .mappings .mappingsDisabledAlert {
    margin-bottom: 20px;
}

.action .mappings .mappingsDisabledAlert::part(base) { 
    background-color: transparent;
    border: 0;
    color: var(--sl-color-danger-600);
}

.action .mappings .mappingsDisabledAlert::part(icon) { 
    padding: 0;
    padding-right: 10px;
}

.action .mappings .mappingsDisabledAlert::part(message) { 
    padding: 0;
}

.action .mappings .mappingsDisabledAlert sl-icon {
    color: var(--sl-color-danger-600);
}

.action .mappings .mapping {
    display: grid;
    grid-template-columns: 1fr 30px 1fr;
    gap: 20px;
    align-items: center;
    margin-bottom: 20px;
}

.action .mappings .mapping:last-child { 
    margin-bottom: 0;
}

.action .propertiesItemName {
    font-size: 14px;
    font-weight: 600;
}

.action .propertiesItemName .name {
    font-weight: 400;
    font-size: 13px;
    opacity: .7;
}

.action .propertiesItemType {
    font-size: 13px;
    opacity: .7;
}

.action .mappings .mapping .arrow {
    display: flex;
    justify-content: center;
    align-items: center;
}

.action .mappings .mapping .inputProperty::part(base) {
    font-family: monospace!important;
} 

.action .mappings .mapping .inputProperty sl-icon {
    color: var(--sl-color-danger-500);
    font-size: 9px;
}

.action .mappings .mapping .outputProperty {
    margin-left: var(--mapping-indentation);
    position: relative;
}

/* The output property must be disabled to avoid tab focus but it must not
inherit the disabled style */
.action .mappings .mapping .outputProperty[disabled]::part(base) {
    cursor: default;
    background-color: transparent!important;
    border: 0!important;
    opacity: 1!important;
}

.action .mappings .mapping .outputProperty.indented::before { 
    content: "";
    display: block;
    position: absolute;
    left: 15px;
    width: 15px;
    height: 15px;
    border-left: 3px solid var(--sl-color-neutral-400);
    border-bottom: 3px solid var(--sl-color-neutral-400);
    top: 40%;
    transform: translateY(-50%) translate(-30px);
    border-bottom-left-radius: 5px;
}

.action .transformation .inputProperties, .action .transformation .outputProperties {
    display: flex;
    flex-flow: column;
    justify-content: start;
    gap: 10px;
}

.action .transformation .property {
    border: 1px solid var(--border-primary);
    border-radius: var(--radius);
    padding: 10px;
    position: relative;
}

.action .transformation .property .name {
    font-weight: 600;
}

.action .transformation .property .type {
    opacity: .7;
    font-size: 14px;
}

.action .transformation .property .removeProperty {
    position: absolute;
    right: 0;
    top: 50%;
    transform: translate(50%, -50%);
    background-color: var(--bg-gray);
}

.action .transformation .property .removeProperty::part(base) {
    border: 0;
    padding: 0;
}

.action .transformation .property .removeProperty::part(base):hover { 
    background-color: transparent!important;
}

.action .transformation .property .removeProperty::part(label) { 
    padding: 0;
}

.action .transformation .property .removeProperty sl-icon {
    color: var(--sl-color-danger-600);
}

.action .matchingProperties {
    display: grid;
    grid-template-columns: 1fr 100px 1fr;
    gap: 20px;
    align-items: center;
    justify-content: center;
}

.action .matchingProperties sl-input::part(form-control-label) {
    font-size: 13px;
}

.action .matchingProperties .equal {
    display: flex;
    justify-content: center;
    align-items: end;
    height: 100%;
    font-size: 30px;
    position: relative;
    right: 1px;
}

.inputSchemaDialog::part(panel),
.outputSchemaDialog::part(panel) {
    max-height: 600px;
	padding: 5px 0px 30px 10px;
}

.inputSchemaDialog .property,
.outputSchemaDialog .property {
    margin-bottom: 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.inputSchemaDialog .property:last-child,
.outputSchemaDialog .property:last-child {
    margin-bottom: 0;
}

.inputSchemaDialog .property .label,
.outputSchemaDialog .property .label,
.inputSchemaDialog .property .name,
.outputSchemaDialog .property .name {
    font-size: 14px;
    font-weight: 600;
}

.inputSchemaDialog .property.used .name,
.outputSchemaDialog .property.used .name {
    text-decoration: line-through;
}

.inputSchemaDialog .property .type,
.outputSchemaDialog .property .type,
.inputSchemaDialog .property.hasLabel .name,
.outputSchemaDialog .property.hasLabel .name {
    font-weight: 400;
    opacity: .7;
    font-size: 14px;
}

.action .queryButtons,
.action .fileButtons {
    margin-top: 30px;
    display: flex;
    gap: 15px;
}

.action .pathInputWrapper {
    position: relative;
    margin-bottom: 20px;
}

.action .completePath,
.action .completePathError {
    position: absolute;
    left: 5px;
    font-family: monospace;
    font-size: 13px;
    margin-top: 8px;
    opacity: 0;
    transition: opacity .3s;
}

.action .completePath.visible,
.action .completePathError.visible {
    opacity: 1;
}

.action .completePathError {
    color: var(--sl-color-danger-500);
}

.action .sheetsSelectWrapper {
    display: flex;
    align-items: end;
    justify-content: space-between;
    gap: 20px;
}

.action .sheetsSelect {
    margin-top: 20px;
    width: 100%;
}

.action .sheetsSelect.hideListbox::part(listbox) {
    display: none;
}

.action .sheetsError {
    font-size: 13px;
    color: var(--sl-color-danger-500);
    margin-top: 3px;
    font-weight: 600;
}

.action .setSchemaFirst {
    text-align: center;
    font-weight: 600;
}

.action .previewDrawer .grid {
    height: 100%;
    display: block;
}

.action .previewDrawer::part(panel) {
    padding-top: 40px!important;
}

.action .previewDrawer::part(title) {
    padding-top: 0!important;
    padding-bottom: 0!important;
    line-height: 2;
}

.action sl-drawer sl-spinner {
    display: block;
    margin: auto;
    margin-top: 50px!important;
}

